# Q4RTX

./: .gitignore  CMakeLists.txt  GUIDELINES.md  README.md  build.bat  gen_passthrough.py
shaders/: rt_shaders.hlsl
src/proxy/: dllmain.cpp  frame_sender.cpp  frame_sender.h  gl_exports.def  gl_hooks.cpp  gl_hooks_extensions.cpp  gl_hooks_internal.h  gl_hooks_state.cpp  gl_passthrough.cpp  gl_proxy.h  gl_state.h  vbo_tracker.h  vertex_extract.cpp  vertex_extract.h
src/renderer/: d3d12_context.cpp  d3d12_context.h  dxr_helpers.h  frame_receiver.cpp  frame_receiver.h  light.cpp  light.h  main.cpp  object.cpp  object.h  renderer.cpp  renderer.h  rt_pipeline.cpp  rt_pipeline.h  scene.cpp  scene.h  skybox.cpp  skybox.h  window.cpp  window.h
src/shared/: math_utils.h  shared_memory.h
